--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-DATABASE_URL = mongodb://nong:soi10@localhost:27017/pmac?authMechanism=DEFAULT&authSource=admin
+DATABASE_URL = mongodb://adminpmac:pmac%40Ne2*@103.13.231.66:24991/pmac?serverSelectionTimeoutMS=5000&connectTimeoutMS=10000&authSource=admin&authMechanism=SCRAM-SHA-1
 PORT = 3001
