--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "base64-img": "^1.0.4",
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
@@ -17,6 +18,8 @@
     "moment-timezone": "^0.5.34",
     "mongodb": "^4.8.1",
     "mongoose": "^6.5.1",
-    "nodemon": "^2.0.19"
+    "multer": "^1.4.5-lts.1",
+    "nodemon": "^2.0.19",
+    "uuid": "^9.0.0"
   }
 }
