--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "base64-img": "^1.0.4",
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "moment-timezone": "^0.5.34",
@@ -20,6 +21,7 @@
     "mongoose": "^6.5.1",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.19",
+    "secret-key": "^1.5.1",
     "uuid": "^9.0.0"
   }
 }
