--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "base64-img": "^1.0.4",
     "body-parser": "^1.20.0",
+    "convert-excel-to-json": "^1.7.0",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^16.0.1",
@@ -21,6 +22,7 @@
     "mongoose": "^6.5.1",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.19",
+    "read-excel-file": "^5.5.0",
     "secret-key": "^1.5.1",
     "uuid": "^9.0.0"
   }
