--- a/package.json
+++ b/package.json
@@ -22,8 +22,9 @@
     "mongoose": "^6.5.1",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.19",
-    "read-excel-file": "^5.5.0",
+    "read-excel-file": "^5.2.10",
     "secret-key": "^1.5.1",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "xlsx": "^0.18.5"
   }
 }
