--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "crypto": "^1.0.1",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^3.1.2",
     "moment-timezone": "^0.5.34",
     "mongodb": "^4.8.1",
     "mongoose": "^6.5.1",
