--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "crypto": "^1.0.1",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "express-sanitizer": "^1.0.6",
+    "express-validator": "^6.14.2",
+    "helmet": "^6.0.0",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^3.1.2",
     "moment-timezone": "^0.5.34",
