--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "crypto": "^1.0.1",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "express-rate-limit": "^6.6.0",
     "express-sanitizer": "^1.0.6",
     "express-validator": "^6.14.2",
     "helmet": "^6.0.0",
@@ -28,6 +29,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.19",
     "read-excel-file": "^5.2.10",
+    "sanitize": "^2.1.2",
     "secret-key": "^1.5.1",
     "uuid": "^9.0.0",
     "xlsx": "^0.18.5"
