--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 DATABASE_URL = mongodb://adminpmac:pmac%40Ne2*@103.13.231.66:24991/pmac?serverSelectionTimeoutMS=5000&connectTimeoutMS=10000&authSource=admin&authMechanism=SCRAM-SHA-1
 PORT = 3001
 KEY=cdscasddjosak213123312
+JWT_KEY=B8A72A2D9C7A4A41
