--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "argon2": "^0.29.1",
     "axios": "^0.27.2",
     "base64-img": "^1.0.4",
     "body-parser": "^1.20.0",
@@ -29,6 +30,8 @@
     "mongoose": "^6.5.1",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.19",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.0",
     "read-excel-file": "^5.2.10",
     "sanitize": "^2.1.2",
     "secret-key": "^1.5.1",
