--- a/.env
+++ b/.env
@@ -1,4 +1,6 @@
-DATABASE_URL = mongodb://adminpmac:pmac%40Ne2*@103.13.231.66:24991/pmac?serverSelectionTimeoutMS=5000&connectTimeoutMS=10000&authSource=admin&authMechanism=SCRAM-SHA-1
-PORT = 3001
+DATABASE_URL = mongodb://adminpmac:Pmac%40Ne2**@localhost:24991/?serverSelectionTimeoutMS=5000&connectTimeoutMS=10000&authSource=admin&authMechanism=SCRAM-SHA-256
+PORT = 443
 KEY=cdscasddjosak213123312
 JWT_KEY=B8A72A2D9C7A4A41
+
+mongodb://adminpmac:Pmac%40Ne2**@localhost:24991/?serverSelectionTimeoutMS=5000&connectTimeoutMS=10000&authSource=admin&authMechanism=SCRAM-SHA-256
