add env and exite auth

--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
 
+JWT_KEY=kisdfmioisdmfdsncicsmcdskicdsmk
+DATABASE_URL="mongodb://adminpmac:Pmac%40Ne2**@localhost:24991/pmac?serverSelectionTimeoutMS=5000&connectTimeoutMS=10000&authSource=admin&authMechanism=SCRAM-SHA-1"
+
+PORT=443
